--- a/index.html
+++ b/index.html
@@ -4,27 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Cards</title>
+
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
-        <div class="raimbow">
-            <img src="" alt="">
+        <div>
+            <img src="https://github.com/Evelin-Silva.png" alt="github de Evelin">
         </div>
     </header>
     <main>
-        <section class="raimbow">
-            <div>
+        <section>
+            <div id="game">
                 <h1>Meus jogos</h1>
                 <p>Os games que eu mais curto jogar!</p>
-                <img src="" alt="stardew valley">
-                <img src="" alt="dorfromantik">
-                <img src="" alt="subnautica">
-                <img src="" alt="jorney">
+                <img src="images/stardew-valley.jpg" alt="stardew valley">
+                <img src="images/dorfromantik.jpg" alt="dorfromantik">
+                <img src="images/subnautica.jpg" alt="subnautica">
+                <img src="images/journey.jpg" alt="jorney">
             </div>
         </section>
 
-        <section class="raimbow">
-            <div>
+        <section>
+            <div id="streamers">
                 <h1>Canais e streamers</h1>
                 <p>Lista de canais e transmissões que não perco!</p>
                 <img src="" alt="alanzoka">
@@ -32,14 +34,13 @@
             </div>
         </section>
 
-        <section class="raimbow">
-            <div>
+        <section>
+            <div id="networks">
                 <h1>Minhas redes</h1>
                 <p>Se conecte comigo agora mesmo!</p>
                 <img src="" alt="github">
                 <img src="" alt="linkedin">
                 <img src="" alt="instagram">
-                <img src="" alt="threads">
             </div>
         </section>
     </main>
