--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <div id="game">
                 <h1>Meus jogos</h1>
                 <p>Os games que eu mais curto jogar!</p>
-                <img src="images/stardew-valley.jpg" alt="stardew valley">
-                <img src="images/dorfromantik.jpg" alt="dorfromantik">
-                <img src="images/subnautica.jpg" alt="subnautica">
-                <img src="images/journey.jpg" alt="jorney">
+                <a href="https://www.twitch.tv/directory/game/Stardew%20Valley" target="_blank"><img src="images/stardew-valley.jpg" alt="stardew valley"></a>
+                <a href="https://www.twitch.tv/directory/game/Dorfromantik" target="_blank"><img src="images/dorfromantik.jpg" alt="dorfromantik"></a>
+                <a href="https://www.twitch.tv/directory/game/Subnautica" target="_blank"><img src="images/subnautica.jpg" alt="subnautica"></a>
+                <a href="https://www.twitch.tv/directory/game/Journey" target="_blank"><img src="images/journey.jpg" alt="jorney"></a>
             </div>
         </section>
 
@@ -29,8 +29,8 @@
             <div id="streamers">
                 <h1>Canais e streamers</h1>
                 <p>Lista de canais e transmissões que não perco!</p>
-                <img src="" alt="alanzoka">
-                <img src="" alt="maethe">
+                <a href="https://www.twitch.tv/alanzoka" target="_blank"><img src="images/alanzoka.png" alt="alanzoka"></a>
+                <a href="https://www.twitch.tv/maethe" target="_blank"><img src="images/maethe.png" alt="maethe"></a>
             </div>
         </section>
 
@@ -38,9 +38,9 @@
             <div id="networks">
                 <h1>Minhas redes</h1>
                 <p>Se conecte comigo agora mesmo!</p>
-                <img src="" alt="github">
-                <img src="" alt="linkedin">
-                <img src="" alt="instagram">
+                <a href="https://github.com/Evelin-Silva" target="_blank"><img src="images/logo-github.svg" alt="github"></a>
+                <a href="https://www.linkedin.com/in/evelin-da-silva-477b9622a/" target="_blank"><img src="images/logo-linkedin.svg" alt="linkedin"></a>
+                <a href="https://instagram.com/eve.amancio?igshid=ZDc4ODBmNjlmNQ==" target="_blank"><img src="images/logo-instagram.svg" alt="instagram"></a>
             </div>
         </section>
     </main>
